examples/errors/parsing/functions-effect-without-brackets.cn
fun double : int -> int pure = {
  x -> x + x
}

main : () [impure] = ()
